<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#333336"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/bar_btn_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/ic_map"
            android:drawableTint="@drawable/bar_buttons_selector"
            android:text="@string/bar_item_map"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:theme="@style/RadioGroupMenuBarStyle" />

        <RadioButton
            android:id="@+id/bar_btn_new_jobs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_newjobs"
            android:drawableTint="@drawable/bar_buttons_selector"
            android:text="@string/bar_item_newprojects"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:theme="@style/RadioGroupMenuBarStyle" />

        <RadioButton
            android:id="@+id/bar_btn_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_schedule"
            android:drawableTint="@drawable/bar_buttons_selector"
            android:text="@string/bar_item_schedule"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:theme="@style/RadioGroupMenuBarStyle" />

        <RadioButton
            android:id="@+id/bar_btn_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_info"
            android:drawableTint="@drawable/bar_buttons_selector"
            android:text="@string/bar_item_info"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:theme="@style/RadioGroupMenuBarStyle" />

        <RadioButton
            android:id="@+id/bar_btn_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_profile"
            android:drawableTint="@drawable/bar_buttons_selector"
            android:text="@string/bar_item_profile"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:theme="@style/RadioGroupMenuBarStyle" />

    </RadioGroup>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.smc_orgonaizer_app.Schedule"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>